<resources>
    <string name="app_name">D&amp;D Battle Companion</string>
    <string name="battles_button">Battles</string>
    <string name="characters_button">Characters</string>
    <string name="general_enemies_button">General Enemies</string>

    <string name="abilities_button">Abilities</string>
    <string name="skills_button">Skills</string>
    <string name="statuses_button">Statuses</string>
    <string name="attacks_button">Attacks</string>
    <string name="menu_notification">Preparation Reminder</string>
</resources>
