<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:gravity="center">

    <Button
        android:id="@+id/battles_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="20sp"
        android:text="@string/battles_button"
        />
    <Button
        android:id="@+id/characters_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="20sp"
        android:text="@string/characters_button"
        />
    <Button
        android:id="@+id/general_enemies_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/general_enemies_button"
        />

</LinearLayout>