<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:text="Name"/>
            <ImageButton
                android:id="@+id/camera_button"
                android:src="@drawable/camera_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:inputType="number"
                android:text="Max HP"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:inputType="number"
                android:text="HP"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:inputType="number"
                android:text="AC"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:inputType="number"
                android:text="Speed"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:inputType="number"
                android:text="Initiative"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"></View>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <!-- This should probably be done with a fragment. It appears in another layout too -->
        <LinearLayout
            android:id="@+id/stat_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="STR"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="DEX"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="CON"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="INT"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="WIS"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:text="CHA"/>
                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:id="@+id/attacks_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/attacks_button"/>
            <Button
                android:id="@+id/skills_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/skills_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">
            <Button
                android:id="@+id/statuses_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/statuses_button"/>
            <Button
                android:id="@+id/abilities_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/abilities_button"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>